Add simple decode test with ITU conformance suite
Ideally download and test would be split into two separate build rules,
but currently that would cause cases to be downloaded during a normal
build: https://github.com/mesonbuild/meson/issues/2518

--- a/meson.build
+++ b/meson.build
@@ -105,7 +105,7 @@ import('pkgconfig').generate(
   url : 'https://github.com/bgilbert/jxrlib',
 )
 
-executable(
+enc = executable(
   'JxrEncApp',
   'jxrencoderdecoder/JxrEncApp.c',
   include_directories : jxrglue_include,
@@ -113,7 +113,7 @@ executable(
   link_with : [jxrglue],
 )
 
-executable(
+dec = executable(
   'JxrDecApp',
   'jxrencoderdecoder/JxrDecApp.c',
   include_directories : jxrglue_include,
@@ -123,4 +123,12 @@ executable(
 
 jxrlib_dep = declare_dependency(
   link_with : [jxrglue],
+)
+
+test(
+  'decode',
+  files('test/decode.py'),
+  args : [dec],
+  # avoid timeout during download
+  timeout : 1800,
 )
