meson: build with -fwrapv
There are a couple places in the code that are commented
"rollover arithmetic", and probably others that also assume signed
overflow is defined.  Tell the compiler.

--- a/meson.build
+++ b/meson.build
@@ -18,6 +18,7 @@ m_dep = cc.find_library('m', required : false)
 # compiler options
 add_project_arguments(
   '-DDISABLE_PERF_MEASUREMENT',
+  '-fwrapv',
   language: 'c',
 )
 if host_machine.endian() == 'big'
